unpackaged/main/default/objects/nbavs__Insight_Category_Configuration__c/nbavs__Insight_Category_Configuration__c.object-meta.xml
<CustomObject>
    <label>Insight Category Configuration</label>
    <nameField>
        <displayFormat>ICN-{0000}</displayFormat>
        <label>Insight Category Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights Category Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>