unpackaged/main/default/objects/nbavs__Insight_Category_Configuration__c/fields/nbavs__Customer_Words__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Customer_Words__c</fullName>
    <label>Customer Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>