unpackaged/main/default/objects/nbavs__Insight_Category_Configuration__c/fields/nbavs__Trigger__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Trigger__c</fullName>
    <label>Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Expected</fullName>
            </value>
            <value>
                <fullName>Unexpected</fullName>
            </value>
            <value>
                <fullName>Not Expected</fullName>
                <isActive>false</isActive>
                <label>Not Expected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>