unpackaged/main/default/objects/nbavs__Insight_Category_Configuration__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Category_Name__c</columns>
    <columns>nbavs__Trigger__c</columns>
    <columns>nbavs__Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>