unpackaged/main/default/objects/nbavs__Insight_Category_Configuration__c/listViews/nbavs__All_Category_Configuration.listView-meta.xml
<ListView>
    <fullName>nbavs__All_Category_Configuration</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Category_Name__c</columns>
    <columns>nbavs__Trigger__c</columns>
    <columns>nbavs__Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Category Configuration</label>
</ListView>