unpackaged/main/default/objects/nbavs__Insight_Category_Configuration__c/listViews/nbavs__Support.listView-meta.xml
<ListView>
    <fullName>nbavs__Support</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Category_Name__c</columns>
    <columns>nbavs__Trigger__c</columns>
    <columns>nbavs__Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>nbavs__Category_Name__c</field>
        <operation>equals</operation>
        <value>test</value>
    </filters>
    <label>Support</label>
</ListView>